# zip-airlines

./: .coveragerc  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
airplane/: admin.py  const.py  models.py  serializers.py  services.py  urls.py  views.py
airplane/migrations/: 0001_initial.py
airplane/tests/: test_services.py  test_viewset.py
config/: .env
docker/: Dockerfile
main/: urls.py  wsgi.py
main/settings/: __init__.py  base.py
zip_airlines/: urls.py
zip_airlines/settings/: __init__.py  base.py  database.py
